More docs. Fix an issue with cropping point and the crop overlays.

--- a/apps/zotonic_mod_image_edit/priv/lib-src/css/image-edit.scss
+++ b/apps/zotonic_mod_image_edit/priv/lib-src/css/image-edit.scss
@@ -71,6 +71,7 @@
                 text-align: center;
                 color: red;
                 text-shadow: 1px 1px 2px black;
+                z-index: 1410;
             }
         }
     }
